@@ -1,5 +1,5 @@
 Mismatched free() / delete / delete []
-   at 0x........: ...operator delete... (vg_replace_malloc.c:...)
+   at 0x........: operator delete(void*, unsigned long) (vg_replace_malloc.c:...)
    by 0x........: main (mismatches.cpp:6)
  Address 0x........ is 0 bytes inside a block of size 10 alloc'd
    at 0x........: malloc (vg_replace_malloc.c:...)
@@ -13,7 +13,7 @@ Mismatched free() / delete / delete []
    by 0x........: main (mismatches.cpp:7)
 
 Mismatched free() / delete / delete []
-   at 0x........: ...operator delete... (vg_replace_malloc.c:...)
+   at 0x........: operator delete(void*, unsigned long) (vg_replace_malloc.c:...)
    by 0x........: main (mismatches.cpp:13)
  Address 0x........ is 0 bytes inside a block of size 40 alloc'd
    at 0x........: ...operator new[]... (vg_replace_malloc.c:...)
